--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
 }
 
 body {
@@ -144,7 +143,8 @@ header {
     margin-top:16px;
     border-radius:15px;
     padding:24px;
-    box-shadow: var(--shadow)
+    box-shadow: var(--shadow);
+    margin-bottom: 100px;
 }
 
 .user-box {
